; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_vp8.c_ref_to_update.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_vp8.c_ref_to_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@VP56_FRAME_CURRENT = common dso_local global i32 0, align 4
@VP56_FRAME_PREVIOUS = common dso_local global i32 0, align 4
@VP56_FRAME_GOLDEN = common dso_local global i32 0, align 4
@VP56_FRAME_GOLDEN2 = common dso_local global i32 0, align 4
@VP56_FRAME_NONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32, i32)* @ref_to_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ref_to_update(%struct.TYPE_3__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  store i32* %10, i32** %8, align 8
  %11 = load i32, i32* %6, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %3
  %14 = load i32, i32* @VP56_FRAME_CURRENT, align 4
  store i32 %14, i32* %4, align 4
  br label %32

15:                                               ; preds = %3
  %16 = load i32*, i32** %8, align 8
  %17 = call i32 @vp8_rac_get_uint(i32* %16, i32 2)
  switch i32 %17, label %30 [
    i32 1, label %18
    i32 2, label %20
  ]

18:                                               ; preds = %15
  %19 = load i32, i32* @VP56_FRAME_PREVIOUS, align 4
  store i32 %19, i32* %4, align 4
  br label %32

20:                                               ; preds = %15
  %21 = load i32, i32* %7, align 4
  %22 = load i32, i32* @VP56_FRAME_GOLDEN, align 4
  %23 = icmp eq i32 %21, %22
  br i1 %23, label %24, label %26

24:                                               ; preds = %20
  %25 = load i32, i32* @VP56_FRAME_GOLDEN2, align 4
  br label %28

26:                                               ; preds = %20
  %27 = load i32, i32* @VP56_FRAME_GOLDEN, align 4
  br label %28

28:                                               ; preds = %26, %24
  %29 = phi i32 [ %25, %24 ], [ %27, %26 ]
  store i32 %29, i32* %4, align 4
  br label %32

30:                                               ; preds = %15
  %31 = load i32, i32* @VP56_FRAME_NONE, align 4
  store i32 %31, i32* %4, align 4
  br label %32

32:                                               ; preds = %30, %28, %18, %13
  %33 = load i32, i32* %4, align 4
  ret i32 %33
}

declare dso_local i32 @vp8_rac_get_uint(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
